@@ -1,3 +1,7 @@
+2005-03-11 10:37  antirez
+
+	* ChangeLog, jim.c: [lambda] modified to be 'statics' capable.
+
 2005-03-11 10:33  antirez
 
 	* ChangeLog, Makefile: default Makefile optimization level set to
